terraform-digitalplatform-blue-green/files/artifacts/non-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alb-qa
  labels:
    name: alb-qa
