terraform-digitalplatform-blue-green/files/artifacts/non-production/nginx-alb-qa.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: alb-qa
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: alb-qa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.21
        ports:
        - containerPort: 80
