terraform-digitalplatform-blue-green/files/artifacts/non-production/loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:059523608855:certificate/8963ffd5-f47b-4190-aa8f-ee6810b2e772
    alb.ingress.kubernetes.io/group.name: digiplatcore1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-06c84aece808b6894, subnet-0249adeb68a5e5a61, subnet-0dac255c0a3c1e9d4
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-1:059523608855:regional/webacl/CrmSubsysDev01-WebAcl01/77061380-1983-442f-b995-3f44be3f4162  
  name: digiplat-core1-alb-ingress
  namespace: alb-qa
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /loadpage/*
        pathType: ImplementationSpecific
