terraform-digitalplatform-blue-green/files/artifacts/non-production/private_loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:342262165274:certificate/1c4d3a13-b740-4109-bc85-39e7700b0cf2
    alb.ingress.kubernetes.io/group.name: digitalcore
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/subnets: subnet-025cff0e891698e05, subnet-06f41f3e4588bf967, subnet-0b3222c70f626e12a # digital-core-bg-b-subnet-pvtalb-b
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: digital-core-alb-ingress
  namespace: alb-qa
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /loadpage/*
        pathType: ImplementationSpecific
